# swc-binding

./: .gitignore  BUILD_SETUP.md  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  build-async.sh  build.gradle.kts  gh-pages.mjs  github-markdown.css  gradle.properties  how-to-implement-swc-jvm-binding.zh-CN.html  how-to-implement-swc-jvm-binding.zh-CN.md  package.json  pnpm-lock.yaml  run-all-tests.sh  settings.gradle.kts  setup-ubuntu.sh  setup.sh  types.kt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: kover.yaml
build-plugin/: build.gradle.kts  libs.versions.toml
docs/: how-to-implement-swc-jvm-binding.md  how-to-implement-swc-jvm-binding.zh-CN.md  index.html  navigation.html
docs/scripts/: pages.json
docs/swc-binding/: package-list
docs/swc-binding/dev.yidafu.swc.booleanable/: index.html
docs/swc-binding/dev.yidafu.swc.dsl/: amd-config.html  argument.html  array-expression.html  array-pattern.html  arrow-function-expression.html  assignment-expression.html  assignment-pattern-property.html  assignment-pattern.html  assignment-property.html  await-expression.html  big-int-literal.html  binary-expression.html  binding-identifier.html  block-statement.html  boolean-literal.html  break-statement.html  call-expression.html  caller-options.html  catch-clause.html  class-declaration.html  class-expression.html  class-method.html  class-property.html  common-js-config.html  computed-prop-name.html  conditional-expression.html  const-modules-config.html  constructor.html  continue-statement.html  create-array-expression.html  create-array-pattern.html  create-arrow-function-expression.html  create-assignment-expression.html  create-assignment-pattern-property.html  create-assignment-pattern.html  create-assignment-property.html  (+322 more)
gradle/wrapper/: gradle-wrapper.properties
swc-binding/: README.md  README.zh-CN.md  build.gradle.kts
swc-generator/: .gitignore  ArgumentDSL.kt  README.md  README.zh-CN.md  ast.json  build.gradle.kts  create.kt  generate-test-types.sh  package.json  pnpm-lock.yaml  run-single-test.sh  run-tests.sh  serialize.kt  swc-generator-config.yaml  swc-generator-test-config.yaml  test-cli.sh  test-comprehensive.d.ts  test-yaml.kt
swc-generator-kt/: build.gradle.kts  package.json  pnpm-lock.yaml  run-single-test.sh  run-tests.sh  test-cli.sh  test-minimal.d.ts  test-simple.d.ts
swc-generator-kt/tests/: 03-mixed-union.d.ts  04-intersection-type.d.ts  06-interface-inheritance.d.ts  08-optional-properties.d.ts  11-function-types.d.ts  13-export-declarations.d.ts
swc-generator/src/: get-type.ts  transform-swc-type.ts
swc-generator/test-outputs/: test-report.txt
swc-generator/tests/: 01-base-types.d.ts  02-literal-union.d.ts  05-ref-union.d.ts  07-array-types.d.ts  09-index-signature.d.ts  10-generic-types.d.ts  12-recursive-types.d.ts  swc-01-base-types.d.ts  swc-03-mixed-union.d.ts  swc-06-interface-inheritance.d.ts  swc-07-array-types.d.ts  swc-08-optional-properties.d.ts  swc-09-index-signature.d.ts  swc-10-generic-types.d.ts  swc-11-function-types.d.ts  swc-13-export-declarations.d.ts  swc-14-reserved-words.d.ts  swc-17-module-types.d.ts  swc-18-declaration-types.d.ts  swc-21-pattern-types.d.ts  swc-23-jsx-types.d.ts  test-reserved-words.d.ts
swc-jni/: .gitignore  Cargo.toml  README.md  README.zh-CN.md  build.sh  build_debug.sh
swc-jni/.cargo/: config.toml
swc-jni/src/: async_utils.rs  lib.rs  minify.rs  parse.rs  print.rs  transform.rs  util.rs
swc-jni/test-fixtures/: test_tsx.json
swc-jni/test-fixtures/invalid/: syntax-error.js
swc-jni/test-fixtures/javascript/: complex.js  simple.js  with-imports.js
swc-jni/test-fixtures/options/: minify-options.json  parse-options.json  transform-options.json
swc-jni/test-fixtures/typescript/: complex.ts  simple.ts  with-types.ts
swc-jni/tests/: integration_test.rs
(+5170 files in other folders)
