[package]
name = "swc_jni"
version = "0.1.0"
edition = "2021"
authore = ["yidafu"]
categories = ["swc", "jni"]
license = "Apache-2.0"
description = "swc jni binding"
homepage = "https://github.com/yidafu/swc-binding"
documentation = "https://github.com/yidafu/swc-binding"
repository = "https://github.com/yidafu/swc-binding"
readme = "README.md"

[features]
# default = ["serde-impl"]
# plugin = [
#   "swc_core/plugin_transform_host_native",
#   "swc_core/plugin_transform_host_native_filesystem_cache",
# ]
# swc_v1 = ["swc_core/bundler_node_v1"]

[dependencies]
anyhow = "1.0.75"
jni = "0.21.1"
jni_fn = "0.1.2"
swc_core = "0.87.27"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["unbounded_depth"] }
swc = "0.270.25"
swc_common = "0.33.9"
swc_ecma_ast = { version ="0.110.10", features = ["serde-impl"] }
swc_ecma_transforms = "0.227.19"
swc_ecma_transforms_base = "0.135.11"
swc_ecma_visit = "0.96.10"
tracing = "0.1.40"
swc_ecma_codegen = "0.146.39"
thiserror = "1.0.50"

[lib]
crate_type = ["cdylib"]
path = "src/lib.rs"
