[package]
name = "swc_jni"
version = "0.1.0"
edition = "2021"
authors = ["yidafu"]
categories = ["swc", "jni"]
license = "MIT"
description = "swc jni binding"
homepage = "https://github.com/yidafu/swc-binding"
documentation = "https://github.com/yidafu/swc-binding"
repository = "https://github.com/yidafu/swc-binding"
readme = "README.md"

[features]
# default = ["serde-impl"]
# plugin = [
#   "swc_core/plugin_transform_host_native",
#   "swc_core/plugin_transform_host_native_filesystem_cache",
# ]
# swc_v1 = ["swc_core/bundler_node_v1"]

[dependencies]
anyhow = "1.0.100"
jni = "0.21.1"
jni_fn = "0.1.2"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = { version = "1.0.115", features = ["unbounded_depth"] }
serde_json_path_to_error = "0.1.1"
swc = "43.0.0"
swc_common = "15.0.0"
swc_ecma_ast = { version = "16.0.0", features = ["serde-impl"] }
swc_ecma_transforms = "36.0.0"
swc_ecma_transforms_base = "28.0.0"
swc_ecma_visit = "16.0.0"
tracing = "0.1.41"
swc_ecma_codegen = "18.0.0"
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.23.0"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
